@@ -2,6 +2,8 @@
 
 	* gtk/gtktreeview.c (gtk_tree_view_state_changed): Set
 	background upon state changes.  (#301651, Billy Biggs)
+	(gtk_tree_view_get_path_at_pos): Take RTL into account
+	when iterating over the columns.  (#302163)
 	
 	* configure.in: Check for nm.
 
